src/test/deca/syntax/valid/SansObjet/Main2-NonsenseInst.deca
// Description:
//    Declaration of a meaningless instruction.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        jslgkjdlfgj;
}
